--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,14 @@ header {
     -webkit-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
     box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
+    max-width: 80%;
 }
+@media (max-width: 40em) {
+    .logo-plovdiv {
+        max-width: 100%;
+    }
+}
+#activities {
 #activities {
     display: flex;
     flex-direction: column;
