--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ header {
     -webkit-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
     box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
-    max-width: 80%;
+    max-width: 80vw;
 }
 @media (max-width: 40em) {
     .logo-plovdiv {
