--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,6 @@ header {
         max-width: 100%;
     }
 }
-
 #activities {
     display: flex;
     flex-direction: column;
@@ -137,6 +136,7 @@ header {
     color: white;
 
 }
+
 .activity-card-title {
     width: 100%;
     height: 100%;
@@ -150,14 +150,22 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    opacity: 0;
-}
-.activity-card-title:hover {
     opacity: 1;
-    -webkit-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.15);
-    -moz-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.15);
-    box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.15);
 }
+
+@media (min-width: 40em) {
+    .activity-card-title {
+        opacity: 0;
+    }
+
+    .activity-card-title:hover {
+        opacity: 1;
+        -webkit-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.15);
+        -moz-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.15);
+        box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.15);
+    }
+}
+
 .ancient-history_img {
     -webkit-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
