--- a/styles.css
+++ b/styles.css
@@ -197,6 +197,7 @@ header {
 }
 .quote-content {
     display: flex;
+    flex-direction: column;
     align-items: center;
     gap: 2rem;
     width: 100%;
@@ -210,17 +211,23 @@ header {
     -moz-box-shadow: 0px 20px 40px 0px rgba(224,69,22,0.2);
     box-shadow: 0px 20px 40px 0px rgba(224,69,22,0.2);   
 }   
+@media (min-width: 40em) {
+    .quote-content {
+        display: flex;
+    }
+}
 .quote-content img {
     max-width:30%;
     height: 30%;
 }
 @media (min-width: 40em) and (min-width: 71em) {
-    .quote-content {
-        width: 50%;
+    .quote-content img {
+        max-width: 50%;
         height: 50%;
         margin-block: 2rem;
     }
 }
+
 .quote-author {
     font-style: italic;
     font-weight: bold;
