--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ header {
     -webkit-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
     box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
-    max-width: 80vw;
+    max-width: 80%;
 }
 @media (max-width: 40em) {
     .logo-plovdiv {
@@ -214,16 +214,19 @@ header {
 @media (min-width: 40em) {
     .quote-content {
         display: flex;
+        flex-direction: row;
+        width: 50%;
+        height: 50%;
     }
 }
 .quote-content img {
-    max-width:30%;
-    height: 30%;
+    max-width:50%;
+    height: 50%;
 }
 @media (min-width: 40em) and (min-width: 71em) {
     .quote-content img {
-        max-width: 50%;
-        height: 50%;
+        max-width: 30%;
+        height: 30%;
         margin-block: 2rem;
     }
 }
