--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ header {
     -webkit-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
     box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
+    width: 80vw;
     max-width: 80%;
 }
 @media (max-width: 40em) {
@@ -205,7 +206,7 @@ header {
     background-color: var(--clr-neutral-100);
     border-radius: 2.5rem;
     border-top: 5px solid var(--clr-rose);
-    padding: 4rem;
+    padding: 2rem;
     margin-inline: 1rem;
     -webkit-box-shadow: 0px 20px 40px 0px rgba(224,69,22,0.2);
     -moz-box-shadow: 0px 20px 40px 0px rgba(224,69,22,0.2);
@@ -217,6 +218,7 @@ header {
         flex-direction: row;
         width: 50%;
         height: 50%;
+        padding: 4rem;
     }
 }
 
