--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ section {
     align-items: center;
 }
 .container {
-    padding: 4rem;
+    padding: 2rem;
 }
 
 @media (min-width: 40em) and (min-width: 71em) {
@@ -87,6 +87,11 @@ header {
     justify-content: center;
     height: 100vh;
 }
+@media (min-width: 40em) {
+    header {
+        overflow: hidden;
+    }
+}
 
 .logo-plovdiv {
     -webkit-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
@@ -94,10 +99,13 @@ header {
     box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
     width: 80vw;
     max-width: 80%;
+    transition: ease-in 300ms;
 }
-@media (max-width: 40em) {
+@media (min-width: 40em) {
     .logo-plovdiv {
+        width: 25rem;
         max-width: 100%;
+        transition: ease-in 300ms;
     }
 }
 #activities {
@@ -164,6 +172,7 @@ header {
         -webkit-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.15);
         -moz-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.15);
         box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.15);
+        transition: ease-in 300ms;
     }
 }
 
@@ -171,7 +180,7 @@ header {
     -webkit-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
     box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.5);
-    width: 800px;
+    width: 50rem;
     max-width: 100%;
 }
 .ancient-history {
