--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ section {
     align-items: center;
 }
 .container {
-    padding: 2rem;
+    padding: 4rem 2rem;
 }
 
 @media (min-width: 40em) and (min-width: 71em) {
